# NCOMdecoder

./: .README.csv  .gitignore  .travis.yml  CMakeLists.txt  ImcFamsMeasurments.csv  LICENSE  Makefile  Makefile_old  MultiPlatBuildScript.sh  NComRxC.code-workspace  README.md  measurements.csv  test.py
MSVC_2017/: NComRxC.sln
MSVC_2017/NComRxC/: NComRxC.vcxproj  NComRxC.vcxproj.filters  stdafx.cpp
dotnetwrapper/: NComRxCLib.nuspec  NComRxCLib.sln  buildNugetPackage.sh
dotnetwrapper/NComRxCLib.Android/: NComRxCLib.Android.csproj
dotnetwrapper/NComRxCLib.Android/Properties/: AssemblyInfo.cs
dotnetwrapper/NComRxCLib.Android/Resources/: Resource.designer.cs
dotnetwrapper/NComRxCLib.Android/Resources/values/: strings.xml
dotnetwrapper/NComRxCLib.Shared/: NComRxC.cs  NComRxCLib.Shared.projitems  NComRxCLib.Shared.shproj  NComRxCSafeHandle.cs  NComRxCWrapper.cs
dotnetwrapper/NComRxCLib.Standard/: NComRxCLib.Standard.csproj
dotnetwrapper/NComRxCLib.iOS/: ApiDefinition.cs  NComRxCLib.iOS.csproj  Structs.cs
example/: Makefile  NcomToCsv.c
examples/: NcomToCsv.c
nav/: NComRxC.c  NComRxC.h
src/: NComRxC.c
wrapper/: NComRxCWrapper.cpp  NComRxCWrapper.hpp  NComRxCWrapperTest.cpp
